# HorizonSpatialEngine

./: .cursorrules  .dockerignore  .env.example  Cargo.toml  Dockerfile  README.md  docker-compose.yml  sqlx.toml
crates/horizon-api/: Cargo.toml
crates/horizon-api/src/: dto.rs  lib.rs  service.rs  spatial_compute.rs
crates/horizon-core/: Cargo.toml
crates/horizon-core/src/: engine.rs  error.rs  lib.rs  query.rs  spatial.rs
crates/horizon-core/src/spatial/: entry.rs  index.rs  mod.rs
crates/horizon-core/src/visual_justice_metrics/: horizon_blockage.rs  mod.rs  raycast.rs  scratch.rs
crates/horizon-geometry/: Cargo.toml
crates/horizon-geometry/src/: building.rs  coordinate.rs  dataset.rs  lib.rs  line_string.rs  point.rs  polygon.rs
crates/horizon-proto/: Cargo.toml  build.rs
crates/horizon-proto/proto/spatial/v1/: spatial.proto
crates/horizon-proto/proto/spatial_compute/v1/: spatial_compute.proto
crates/horizon-proto/src/: lib.rs
crates/horizon-server/: Cargo.toml
crates/horizon-server/src/: adapter.rs  main.rs
crates/horizon-storage/: Cargo.toml
crates/horizon-storage/src/: error.rs  lib.rs  loader.rs  mmap.rs
crates/horizon-transport/: Cargo.toml
crates/horizon-transport/src/: convert.rs  lib.rs  server.rs  spatial_compute_convert.rs  spatial_compute_server.rs  traceparent.rs
crates/horizon_topology/: Cargo.toml
crates/horizon_topology/src/: error.rs  ewkb.rs  lib.rs  model.rs  neighborhood.rs  repo.rs
migrations/: 001_create_urban_topology.sql  002_seed_coastal_neighborhoods.sql
scripts/: prepare_sqlx.ps1
