[package]
name = "horizon-proto"
description = "Protobuf definitions for HorizonSpatialEngine gRPC transport"
publish = false

[lib]
name = "horizon_proto"
path = "src/lib.rs"

[dependencies]
prost = { workspace = true }
tonic = { workspace = true }

[build-dependencies]
tonic-build = { workspace = true }
