[package]
name = "horizon-transport"
description = "gRPC transport layer for HorizonSpatialEngine"
publish = false

[lib]
name = "horizon_transport"
path = "src/lib.rs"

[dependencies]
horizon-api = { workspace = true }
horizon-proto = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }
tracing = { workspace = true }
async-trait = "0.1"

[features]
default = []
